@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 2016-07-XX  Release 7.26.2                                     ---
 ----------------------------------------------------------------------
 
+* added support for .rtwizardrc configuration file - Cliff Yapp
 * updated MGED gdiff default drawing options to -l -r - Cliff Yapp
 * updated MGED gdiff default tolerance to 100mm - Cliff Yapp
 * removed MGED gdiff -R option - now default behavior - Cliff Yapp
